<?xml version="1.0"?>
<package format="2">
  <name>uoa_poc3_msgs</name>
  <version>1.0.0</version>
  <description>
    The uoa_poc3_msgs package
  </description>
  <maintainer  email="s-kumada@jadsys.co.jp">s-kumada</maintainer>

  <license>BSD</license>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend> <!-- 0718追加 -->
  <build_export_depend>geometry_msgs</build_export_depend> <!-- 0718追加 -->
  <exec_depend>geometry_msgs</exec_depend> <!-- 0718追加 -->

</package>
